Dynamic loading of events and version, fix for CQ (RCP sen)

--- a/ez7gen-web/public/generate.html
+++ b/ez7gen-web/public/generate.html
@@ -37,6 +37,6 @@
 	<i>Version</i>: {{version.selected.name}} <i>Message</i> : {{event.selected.name}}
 </h4>
 
-<pre>{{payload.message}}</pre>
+<pre>{{hl7.message}}</pre>
 <button class="btn-default" ng-click="generate()">Generate HL7</button>
 
