--- a/ez7gen-web/public/validate.html
+++ b/ez7gen-web/public/validate.html
@@ -1,6 +1,6 @@
 		<h4><i>Version</i>: {{version}} <i>Message</i> {{event}}</h4>
 
-		<pre>{{payload.message}}</pre>
+		<pre>{{hl7.message}}</pre>
 		<button class="btn-default" ng-click="validate()">Validate HL7</button>
 	    <hr/>
 		<!--<p>-->
