--- a/ez7gen-web/public/index.html
+++ b/ez7gen-web/public/index.html
@@ -15,12 +15,6 @@
 	document.createElement('ui-select-choices');
 </script>
 <![endif]-->
-<!-- 	<script src="js/angular-bootstrap.js" type="text/javascript"></script>
-	<script src="js/index.js"></script>
- -->
-<!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>-->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>-->
-<!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>-->
 
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
@@ -28,12 +22,11 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.0.0.js"></script>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+<!--<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">-->
 
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-sanitize.js"></script>
-<!--<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css">-->
 
 <script src="js/index.js"></script>
-<!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">-->
 
 <!-- ui-select files -->
 <script src="js/select.js"></script>
@@ -48,18 +41,17 @@
   Less versions are available at https://github.com/brianreavis/selectize.js/tree/master/dist/less
 -->
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
-<!-- <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.bootstrap2.css"> -->
-<!-- <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.bootstrap3.css"> -->
+
 
 <style>
 	body {
-		padding: 15px;
+		padding: 25px;
 	}
 
-	.select2 > .select2-choice.ui-select-match {
-		/* Because of the inclusion of Bootstrap */
-		height: 29px;
-	}
+	/*.select2 > .select2-choice.ui-select-match {*/
+		/*!* Because of the inclusion of Bootstrap *!*/
+		/*height: 29px;*/
+	/*}*/
 
 	.selectize-control > .selectize-dropdown {
 		top: 36px;
@@ -75,19 +67,28 @@
 	display: none !important;
 }
 </style>
+
+<!--pannel-->
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
+<script type="text/javascript" src="js/angular.panels.js"></script>
+<link rel="stylesheet" type="text/css" href="css/angular.panels.css">
+
 </head>
 
-<body ng-app="app" ng-cloak class="ng-cloak">
+	<body ng-app="app"  ng-cloak class="ng-cloak">
 
-	<div ng-controller="navigation" class="container">
-		<ul class="nav nav-pills" role="tablist">
-			<!--<li class="active"><a href="#/">Generate</a></li>-->
-			<li><a href="#/">Generate</a></li>
-			<li><a href="#/edit">Edit</a></li>
-			<li><a href="#/validate">Validate</a></li>
-		</ul>
-	</div>
-	<div ng-view class="container"></div>
- 
- </body>
+		<!--<div  ng-controller="navigation" class="container">-->
+			<!--<ul class="nav nav-pills" role="tablist">-->
+				<!--&lt;!&ndash;<li class="active"><a href="#/">Generate</a></li>&ndash;&gt;-->
+				<!--<li><a href="" data-ng-click="leftOpen()" class="btn btn-default">Options</a></li>-->
+			<!--</ul>-->
+
+			<!--&lt;!&ndash;left panel with options&ndash;&gt;-->
+			<!--<div data-panels="true"></div>-->
+
+			<!--container for view-->
+			<div ng-view class="container"></div>
+		<!--</div>-->
+
+	</body>
 </html>
