integration with back end dynamic versions

--- a/ez7gen-web/public/index.html
+++ b/ez7gen-web/public/index.html
@@ -69,9 +69,9 @@
 </style>
 
 <!--pannel-->
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
-<script type="text/javascript" src="js/angular.panels.js"></script>
-<link rel="stylesheet" type="text/css" href="css/angular.panels.css">
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>-->
+<!--<script type="text/javascript" src="js/angular.panels.js"></script>-->
+<!--<link rel="stylesheet" type="text/css" href="css/angular.panels.css">-->
 
 </head>
 
