--- a/ez7gen-web/public/generate.html
+++ b/ez7gen-web/public/generate.html
@@ -5,42 +5,42 @@
 <div class="form-group">
 
     <div class="row">
-            <div class="col-md-2">
-                <!--<h3>HL7 Version</h3>-->
-                <!--<p>Selected: {{event.selected.name}}</p>-->
-                <ui-select ng-model="std.selected" theme="selectize" ng-disabled="disabled" style="width: 130px;" on-select="setVersions(std.selected)">
-                    <ui-select-match placeholder="HL7 Standards">{{$select.selected.std}}</ui-select-match>
-                    <ui-select-choices repeat="std in standards | filter: $select.search" refresh="setVersions($select.search)" refresh-delay="0">
-                        <span ng-bind-html="std.std | highlight: $select.search"></span>
-                        <!--<small ng-bind-html="event.code | highlight: $select.search"></small>-->
-                    </ui-select-choices>
-                </ui-select>
-            </div>
+        <div class="col-md-2">
+            <!--<h3>HL7 Version</h3>-->
+            <!--<p>Selected: {{event.selected.name}}</p>-->
+            <ui-select ng-model="std.selected" theme="selectize" ng-disabled="disabled" style="width: 150px;" on-select="setVersions(std.selected)">
+                <ui-select-match placeholder="HL7 Standards">{{$select.selected.std}}</ui-select-match>
+                <ui-select-choices repeat="std in standards | filter: $select.search" refresh="setVersions($select.search)" refresh-delay="0">
+                    <span ng-bind-html="std.std | highlight: $select.search"></span>
+                    <!--<small ng-bind-html="event.code | highlight: $select.search"></small>-->
+                </ui-select-choices>
+            </ui-select>
+        </div>
 
 
         <div class="col-md-2">
-        <!--<h3>HL7 Version</h3>-->
-        <!--<p>Selected: {{event.selected.name}}</p>-->
-        <ui-select ng-model="version.selected" theme="selectize" ng-disabled="disabled" style="width: 130px;" on-select="setEvents(version.selected)">
-            <ui-select-match placeholder="HL7 Version">{{$select.selected.name}}</ui-select-match>
-            <ui-select-choices repeat="version in versions | filter: $select.search" refresh="setEvents($select.search)" refresh-delay="0">
-                <span ng-bind-html="version.name | highlight: $select.search"></span>
-                <small ng-bind-html="version.desc | highlight: $select.search"></small>
-            </ui-select-choices>
-        </ui-select>
+            <!--<h3>HL7 Version</h3>-->
+            <!--<p>Selected: {{event.selected.name}}</p>-->
+            <ui-select ng-model="version.selected" theme="selectize" ng-disabled="disabled" style="width: 150px;" on-select="setEvents(version.selected)">
+                <ui-select-match placeholder="HL7 Version">{{$select.selected.name}}</ui-select-match>
+                <ui-select-choices repeat="version in versions | filter: $select.search" refresh="setEvents($select.search)" refresh-delay="0">
+                    <span ng-bind-html="version.name | highlight: $select.search"></span>
+                    <small ng-bind-html="version.desc | highlight: $select.search"></small>
+                </ui-select-choices>
+            </ui-select>
         </div>
 
-        <div class="col-md-2">
-        <!--<h3>HL7 Event</h3>-->
-        <!--<p>Selected: {{event.selected.name}}</p>-->
-        <ui-select ng-model="event.selected" theme="selectize" ng-disabled="disabled" style="width: 200px;">
-            <ui-select-match placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>
-            <ui-select-choices repeat="event in events | filter: $select.search">
-                <span ng-bind-html="event.name | highlight: $select.search"></span>
-                <small ng-bind-html="event.code | highlight: $select.search"></small>
-            </ui-select-choices>
-        </ui-select>
-        </div>
+    <div class="col-md-2">
+    <!--<h3>HL7 Event</h3>-->
+    <!--<p>Selected: {{event.selected.name}}</p>-->
+    <ui-select ng-model="event.selected" theme="selectize" ng-disabled="disabled" style="width: 400px;">
+        <ui-select-match placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>
+        <ui-select-choices repeat="event in events | filter: $select.search">
+            <span ng-bind-html="event.name | highlight: $select.search"></span>
+            <small ng-bind-html="event.code | highlight: $select.search"></small>
+        </ui-select-choices>
+    </ui-select>
+    </div>
 
     </div>
 </div>
@@ -61,7 +61,15 @@
 </uib-accordion>
 </div>
 
-<button class="btn-default" ng-click="generate()">Generate HL7</button>
+<button class="btn btn-primary" ng-click="generate()">Generate HL7</button>
+<button class="btn btn-success" ng-click="validate()">Validate HL7</button>
+
+<div>
+    <button type="button" ng-click="toggle()" class="btn btn btn-default">+</button>
+</div>
+<!--</p>-->
+<pre ng-show="visible"><h4 ng-style={"color":"green"}>{{response.message}}</h4></pre>
+
 
 <!--http://eu81273.github.io/angular.panels/-->
 <!--http://blackrockdigital.github.io/startbootstrap-simple-sidebar/-->
