fix for repeating groups in RRE_012, TQ datatype fix

--- a/ez7gen-web/public/generate.html
+++ b/ez7gen-web/public/generate.html
@@ -33,9 +33,9 @@
     <div class="col-md-2">
     <!--<h3>HL7 Event</h3>-->
     <!--<p>Selected: {{event.selected.name}}</p>-->
-    <ui-select ng-model="event.selected" theme="selectize" ng-disabled="disabled" style="width: 400px;">
+    <ui-select ng-model="event.selected" theme="selectize" ng-disabled="disabled" style="width: 400px;" group>
         <ui-select-match placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>
-        <ui-select-choices repeat="event in events | filter: $select.search">
+        <ui-select-choices group-by="'group'"repeat="event in events | filter: $select.search">
             <span ng-bind-html="event.name | highlight: $select.search"></span>
             <small ng-bind-html="event.code | highlight: $select.search"></small>
         </ui-select-choices>
