--- a/ez7gen-web/public/index.html
+++ b/ez7gen-web/public/index.html
@@ -58,6 +58,10 @@
 	}
 </style>
 
+<!-- xeditable-->
+<script src="js/xeditable.js"></script>
+<link rel="stylesheet" href="css/xeditable.css">
+
 <!-- <link
 	href="css/angular-bootstrap.css"
 	rel="stylesheet">
