Added group-filter, fixed parser filter, started on radio buttons

--- a/ez7gen-web/public/generate.html
+++ b/ez7gen-web/public/generate.html
@@ -8,8 +8,8 @@
         <div class="col-md-2">
             <!--<h3>HL7 Version</h3>-->
             <!--<p>Selected: {{event.selected.name}}</p>-->
-            <!--<ui-select ng-model="std.selected" theme="selectize" ng-disabled="disabled" style="width: 150px;" on-select="setVersions(std.selected)">-->
-            <ui-select ng-model="std.selected" theme="select2" ng-disabled="disabled" style="width: 150px;" on-select="setVersions(std.selected)">
+            <!--<ui-select ng-model="std.selected" theme="select2" ng-disabled="disabled" style="width: 150px;" on-select="setVersions(std.selected)">-->
+            <ui-select ng-model="std.selected" theme="selectize" ng-disabled="disabled" style="width: 150px;" on-select="setVersions(std.selected)">
                 <ui-select-match placeholder="HL7 Standards">{{$select.selected.std}}</ui-select-match>
                 <ui-select-choices repeat="std in standards | filter: $select.search" refresh="setVersions($select.search)" refresh-delay="0">
                     <span ng-bind-html="std.std | highlight: $select.search"></span>
@@ -20,10 +20,8 @@
 
 
         <div class="col-md-2">
-            <!--<h3>HL7 Version</h3>-->
-            <!--<p>Selected: {{event.selected.name}}</p>-->
-            <ui-select ng-model="version.selected" theme="select2" ng-disabled="disabled" style="width: 150px;" on-select="setEvents(version.selected)">
-                <ui-select-match placeholder="HL7 Version">{{$select.selected.name}}</ui-select-match>
+            <ui-select ng-model="version.selected" theme="selectize" ng-disabled="disabled" style="width: 150px;" on-select="setEvents(version.selected)">
+            <ui-select-match placeholder="HL7 Version">{{$select.selected.name}}</ui-select-match>
                 <ui-select-choices repeat="version in versions | filter: $select.search" refresh="setEvents($select.search)" refresh-delay="0">
                     <span ng-bind-html="version.name | highlight: $select.search"></span>
                     <small ng-bind-html="version.desc | highlight: $select.search"></small>
@@ -31,22 +29,28 @@
             </ui-select>
         </div>
 
-    <div class="col-md-2">
-    <!--<h3>HL7 Event</h3>-->
-    <!--<p>Selected: {{event.selected.name}}</p>-->
-    <ui-select ng-model="event.selected" theme="select2" ng-disabled="disabled" style="width: 400px;" group>
-        <ui-select-match placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>
-        <!--<ui-select-choices group-by="ctrl.firstLetterGroupFn" group-filter="['Z','B','C']" repeat="country in ctrl.countries | filter: $select.search">-->
-        <ui-select-choices group-by="'group'" group-filter="['Pharmacy']" repeat="event in events | filter: $select.search">
-            <span ng-bind-html="event.name | highlight: $select.search"></span>
-            <small ng-bind-html="event.code | highlight: $select.search"></small>
-        </ui-select-choices>
-    </ui-select>
+        <div class="col-md-2">
+            <ui-select ng-model="event.selected" theme="selectize" ng-disabled="disabled" style="width: 400px;" group>
+                <ui-select-match placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>
+                <!--<ui-select-choices group-by="'group'"  group-filter="['Pharmacy']" repeat="event in events | filter: $select.search">-->
+                <ui-select-choices group-by="'group'"  group-filter="groupFilterFn" repeat="event in events | filter: $select.search">
+                    <span ng-bind-html="event.name | highlight: $select.search"></span>
+                    <small ng-bind-html="event.code | highlight: $select.search"></small>
+                </ui-select-choices>
+            </ui-select>
+        </div>
+
+        <!--<div class="btn-group">-->
+        <!--<div class="col-md-2">-->
+            <!--&lt;!&ndash;<label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Left'">Admissions</label>&ndash;&gt;-->
+            <!--&lt;!&ndash;<label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Middle'">Pharmacy</label>&ndash;&gt;-->
+            <!--&lt;!&ndash;<button class="btn btn-primary" ng-model="radioModel" >Admissions</button>&ndash;&gt;-->
+            <!--&lt;!&ndash;<button class="btn btn-primary" ng-model="radioModel" >Pharmacy</button>&ndash;&gt;-->
+        <!--</div>-->
+
     </div>
-
 </div>
-
-    <h4>
+<h4>
 	<i>Version</i>: {{version.selected.name}} <i>Message</i> : {{event.selected.name}}
 </h4>
 
@@ -60,7 +64,7 @@
 
 <button class="btn btn-primary" ng-click="generate()">Generate HL7</button>
 <button class="btn btn-success" ng-click="validate()">Validate HL7</button>
-<button class="btn btn-default" ng-click="hl7Area.$show()" ng-hide="hl7Area.$visible" >Edit HL7</button>
+<!--<button class="btn btn-default" ng-click="hl7Area.$show()" ng-hide="hl7Area.$visible" >Edit HL7</button>-->
 
 <div>
     <button type="button" ng-click="toggle()" class="btn btn btn-default">+</button>
