--- a/ez7gen-web/public/generate.html
+++ b/ez7gen-web/public/generate.html
@@ -32,30 +32,30 @@
         <div class="col-md-2">
             <ui-select ng-model="event.selected" theme="selectize" ng-disabled="disabled" style="width: 400px;" group>
                 <ui-select-match placeholder="HL7 Event">{{$select.selected.name}}</ui-select-match>
-                <!--<ui-select-choices group-by="'group'"  group-filter="['Pharmacy']" repeat="event in events | filter: $select.search">-->
-                <ui-select-choices group-by="'group'"  group-filter="groupFilterFn" repeat="event in events | filter: $select.search">
+                <!--<ui-select-choices group-by="'group'"  group-filter="groupFilterFn" repeat="event in events | filter: $select.search">-->
+                <ui-select-choices group-by="'group'"  repeat="event in events | filter: $select.search">
                     <span ng-bind-html="event.name | highlight: $select.search"></span>
                     <small ng-bind-html="event.code | highlight: $select.search"></small>
                 </ui-select-choices>
             </ui-select>
         </div>
 
-        <!--<div class="btn-group">-->
-        <!--<div class="col-md-2">-->
-            <!--&lt;!&ndash;<label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Left'">Admissions</label>&ndash;&gt;-->
-            <!--&lt;!&ndash;<label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Middle'">Pharmacy</label>&ndash;&gt;-->
-            <!--&lt;!&ndash;<button class="btn btn-primary" ng-model="radioModel" >Admissions</button>&ndash;&gt;-->
-            <!--&lt;!&ndash;<button class="btn btn-primary" ng-model="radioModel" >Pharmacy</button>&ndash;&gt;-->
-        <!--</div>-->
-
     </div>
+
 </div>
+
+<!--<div class="btn-group">-->
+<!--<label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Left'">Admissions</label>-->
+<!--<label class="btn btn-primary" ng-model="radioModel" uib-btn-radio="'Middle'">Pharmacy</label>-->
+<!--</div>-->
+
 <h4>
 	<i>Version</i>: {{version.selected.name}} <i>Message</i> : {{event.selected.name}}
 </h4>
 
 <!--<pre>{{hl7.message}}</pre>-->
-<!--<pre editable-textarea="hl7.message" e-form="hl7Area" e-rows="7" e-cols="40">-->
+<!--<pre     </div>
+editable-textarea="hl7.message" e-form="hl7Area" e-rows="7" e-cols="40">-->
 <pre editable-textarea="hl7.message" e-form="hl7Area" e-style="width: 1000px; height: 400px; white-space: nowrap;">
 {{hl7.message}}
 </pre>
@@ -64,7 +64,7 @@
 
 <button class="btn btn-primary" ng-click="generate()">Generate HL7</button>
 <button class="btn btn-success" ng-click="validate()">Validate HL7</button>
-<!--<button class="btn btn-default" ng-click="hl7Area.$show()" ng-hide="hl7Area.$visible" >Edit HL7</button>-->
+<button class="btn btn-info" ng-click="hl7Area.$show()" ng-hide="hl7Area.$visible" >Edit HL7</button>
 
 <div>
     <button type="button" ng-click="toggle()" class="btn btn btn-default">+</button>
