--- a/_ez7gen-web/public/index.html
+++ b/_ez7gen-web/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>EazyHL7Generator</title>
+<title>Eazy HL7 Generator</title>
 <!--
 	IE8 support, see AngularJS Internet Explorer Compatibility http://docs.angularjs.org/guide/ie
 	For Firefox 3.6, you will also need to include jQuery and ECMAScript 5 shim
@@ -17,17 +17,14 @@
 <![endif]-->
 
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
 
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.0.0.js"></script>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-<!--<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">-->
 
-<!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-sanitize.js"></script>-->
-
-<script src="js/index.js"></script>
+<!--<script src="js/index.js"></script>-->
 
 <!-- ui-select files -->
 <script src="js/select.js"></script>
@@ -49,11 +46,6 @@
 		padding: 25px;
 	}
 
-	/*.select2 > .select2-choice.ui-select-match {*/
-		/*!* Because of the inclusion of Bootstrap *!*/
-		/*height: 29px;*/
-	/*}*/
-
 	.selectize-control > .selectize-dropdown {
 		top: 36px;
 	}
@@ -63,37 +55,17 @@
 <script src="js/xeditable.js"></script>
 <link rel="stylesheet" href="css/xeditable.css">
 
-<!-- <link
-	href="css/angular-bootstrap.css"
-	rel="stylesheet">
- -->
+<!-- cloak -->
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
 	display: none !important;
 }
 </style>
 
-<!--pannel-->
-<!--<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>-->
-<!--<script type="text/javascript" src="js/angular.panels.js"></script>-->
-<!--<link rel="stylesheet" type="text/css" href="css/angular.panels.css">-->
-
 </head>
 
 	<body ng-app="app"  ng-cloak class="ng-cloak">
-
-		<!--<div  ng-controller="navigation" class="container">-->
-			<!--<ul class="nav nav-pills" role="tablist">-->
-				<!--&lt;!&ndash;<li class="active"><a href="#/">Generate</a></li>&ndash;&gt;-->
-				<!--<li><a href="" data-ng-click="leftOpen()" class="btn btn-default">Options</a></li>-->
-			<!--</ul>-->
-
-			<!--&lt;!&ndash;left panel with options&ndash;&gt;-->
-			<!--<div data-panels="true"></div>-->
-
-			<!--container for view-->
 			<div ng-view class="container"></div>
-		<!--</div>-->
 
 	</body>
 </html>
